--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,6 @@
 applications:
 - name: node-backbone-mongo
+  buildpack: https://github.com/cloudfoundry/nodejs-buildpack
   mem: 128M
   services:
     todos:
